[gd_scene load_steps=9 format=4 uid="uid://c4nocfd0coq2v"]

[ext_resource type="Script" path="res://scripts/minigames/fight_minigame.gd" id="1_ckyft"]
[ext_resource type="Texture2D" uid="uid://m6o0p5v2tp7h" path="res://sprites/minigames/minigames.png" id="2_xkoxb"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_rpai5"]
texture = ExtResource("2_xkoxb")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
5:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
5:2/0 = 0
1:3/0 = 0
5:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0

[sub_resource type="TileSet" id="TileSet_rus2v"]
sources/0 = SubResource("TileSetAtlasSource_rpai5")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_cxnbw"]
size = Vector2(50, 14)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jt1n0"]
size = Vector2(16, 64)

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_3adm5"]
texture = ExtResource("2_xkoxb")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
5:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
5:2/0 = 0
1:3/0 = 0
5:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0

[sub_resource type="TileSet" id="TileSet_idtxi"]
sources/0 = SubResource("TileSetAtlasSource_3adm5")

[node name="fight_minigame" type="Node2D"]
process_mode = 3
texture_filter = 3
script = ExtResource("1_ckyft")

[node name="background" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAAGAAYAAAAAAAEAAAAGAAcAAAAAAAEAAAAGAAgAAAAAAAEAAAAGAAkAAAAAAAEAAAAGAAoAAAAAAAEAAAAGAAsAAAAAAAEAAAAHAAYAAAAAAAEAAAAHAAcAAAAAAAEAAAAHAAgAAAAAAAEAAAAHAAkAAAAAAAEAAAAHAAoAAAAAAAEAAAAHAAsAAAAAAAEAAAAIAAYAAAAAAAEAAAAIAAcAAAAAAAEAAAAIAAgAAAAAAAEAAAAIAAkAAAAAAAEAAAAIAAoAAAAAAAEAAAAIAAsAAAAAAAEAAAAJAAYAAAAAAAEAAAAJAAcAAAAAAAEAAAAJAAgAAAAAAAEAAAAJAAkAAAAAAAEAAAAJAAoAAAAAAAEAAAAJAAsAAAAAAAEAAAAKAAYAAAAAAAEAAAAKAAcAAAAAAAEAAAAKAAgAAAAAAAEAAAAKAAkAAAAAAAEAAAAKAAoAAAAAAAEAAAAKAAsAAAAAAAEAAAALAAYAAAAAAAEAAAALAAcAAAAAAAEAAAALAAgAAAAAAAEAAAALAAkAAAAAAAEAAAALAAoAAAAAAAEAAAALAAsAAAAAAAEAAAAMAAYAAAAAAAEAAAAMAAcAAAAAAAEAAAAMAAgAAAAAAAEAAAAMAAkAAAAAAAEAAAAMAAoAAAAAAAEAAAAMAAsAAAAAAAEAAAANAAYAAAAAAAEAAAANAAcAAAAAAAEAAAANAAgAAAAAAAEAAAANAAkAAAAAAAEAAAANAAoAAAAAAAEAAAANAAsAAAAAAAEAAAAOAAYAAAAAAAEAAAAOAAcAAAAAAAEAAAAOAAgAAAAAAAEAAAAOAAkAAAAAAAEAAAAOAAoAAAAAAAEAAAAOAAsAAAAAAAEAAAAPAAYAAAAAAAEAAAAPAAcAAAAAAAEAAAAPAAgAAAAAAAEAAAAPAAkAAAAAAAEAAAAPAAoAAAAAAAEAAAAPAAsAAAAAAAEAAAAQAAYAAAAAAAEAAAAQAAcAAAAAAAEAAAAQAAgAAAAAAAEAAAAQAAkAAAAAAAEAAAAQAAoAAAAAAAEAAAAQAAsAAAAAAAEAAAARAAYAAAAAAAEAAAARAAcAAAAAAAEAAAARAAgAAAAAAAEAAAARAAkAAAAAAAEAAAARAAoAAAAAAAEAAAARAAsAAAAAAAEAAAASAAYAAAAAAAEAAAASAAcAAAAAAAEAAAASAAgAAAAAAAEAAAASAAkAAAAAAAEAAAASAAoAAAAAAAEAAAASAAsAAAAAAAEAAAATAAYAAAAAAAEAAAATAAcAAAAAAAEAAAATAAgAAAAAAAEAAAATAAkAAAAAAAEAAAATAAoAAAAAAAEAAAATAAsAAAAAAAEAAAA=")
tile_set = SubResource("TileSet_rus2v")

[node name="lines" type="Node2D" parent="."]

[node name="position1" type="Marker2D" parent="lines"]
position = Vector2(320, 128)

[node name="position2" type="Marker2D" parent="lines"]
position = Vector2(320, 144)

[node name="position3" type="Marker2D" parent="lines"]
position = Vector2(320, 160)

[node name="position4" type="Marker2D" parent="lines"]
position = Vector2(320, 176)

[node name="Area1" type="Area2D" parent="lines"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="lines/Area1"]
position = Vector2(152, 120)
shape = SubResource("RectangleShape2D_cxnbw")

[node name="Area2" type="Area2D" parent="lines"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="lines/Area2"]
position = Vector2(152, 136)
shape = SubResource("RectangleShape2D_cxnbw")

[node name="Area3" type="Area2D" parent="lines"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="lines/Area3"]
position = Vector2(152, 152)
shape = SubResource("RectangleShape2D_cxnbw")

[node name="Area4" type="Area2D" parent="lines"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="lines/Area4"]
position = Vector2(152, 168)
shape = SubResource("RectangleShape2D_cxnbw")

[node name="deathline" type="Area2D" parent="lines"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="lines/deathline"]
position = Vector2(88, 144)
shape = SubResource("RectangleShape2D_jt1n0")

[node name="frontground" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAAGAAYAAAAAAAEAAAAGAAcAAAAAAAQAAAAGAAgAAAAAAAQAAAAGAAkAAAAAAAQAAAAGAAoAAAAAAAQAAAAGAAsAAAAAAAEAAAAHAAYAAAABAAMAAAAHAAcAAAAFAAQAAAAHAAgAAAAFAAQAAAAHAAkAAAAFAAQAAAAHAAoAAAAFAAQAAAAHAAsAAAABAAUAAAAIAAYAAAABAAMAAAAIAAcAAAACAAMAAAAIAAgAAAACAAMAAAAIAAkAAAACAAMAAAAIAAoAAAACAAMAAAAIAAsAAAABAAUAAAAJAAYAAAABAAMAAAAJAAcAAAADAAMAAAAJAAgAAAADAAMAAAAJAAkAAAADAAMAAAAJAAoAAAADAAMAAAAJAAsAAAABAAUAAAAKAAYAAAABAAMAAAAKAAcAAAAEAAMAAAAKAAgAAAAEAAMAAAAKAAkAAAAEAAMAAAAKAAoAAAAEAAMAAAAKAAsAAAABAAUAAAALAAYAAAABAAMAAAALAAcAAAABAAQAAAALAAgAAAABAAQAAAALAAkAAAABAAQAAAALAAoAAAABAAQAAAALAAsAAAABAAUAAAAMAAYAAAABAAMAAAAMAAcAAAACAAQAAAAMAAgAAAACAAQAAAAMAAkAAAACAAQAAAAMAAoAAAACAAQAAAAMAAsAAAABAAUAAAANAAYAAAABAAMAAAANAAcAAAACAAQAAAANAAgAAAACAAQAAAANAAkAAAACAAQAAAANAAoAAAACAAQAAAANAAsAAAABAAUAAAAOAAYAAAABAAMAAAAOAAcAAAACAAQAAAAOAAgAAAACAAQAAAAOAAkAAAACAAQAAAAOAAoAAAACAAQAAAAOAAsAAAABAAUAAAAPAAYAAAABAAMAAAAPAAcAAAACAAQAAAAPAAgAAAACAAQAAAAPAAkAAAACAAQAAAAPAAoAAAACAAQAAAAPAAsAAAABAAUAAAAQAAYAAAABAAMAAAAQAAcAAAACAAQAAAAQAAgAAAACAAQAAAAQAAkAAAACAAQAAAAQAAoAAAACAAQAAAAQAAsAAAABAAUAAAARAAYAAAABAAMAAAARAAcAAAACAAQAAAARAAgAAAACAAQAAAARAAkAAAACAAQAAAARAAoAAAACAAQAAAARAAsAAAABAAUAAAASAAYAAAABAAMAAAASAAcAAAADAAQAAAASAAgAAAADAAQAAAASAAkAAAADAAQAAAASAAoAAAADAAQAAAASAAsAAAABAAUAAAATAAYAAAAAAAEAAAATAAcAAAAEAAQAAAATAAgAAAAEAAQAAAATAAkAAAAEAAQAAAATAAoAAAAEAAQAAAATAAsAAAAAAAEAAAAGAAQAAAAAAAEAAAAGAAUAAAAAAAEAAAAHAAQAAAAAAAEAAAAHAAUAAAAAAAEAAAAIAAQAAAAAAAEAAAAIAAUAAAAAAAEAAAAJAAQAAAAAAAEAAAAJAAUAAAAAAAEAAAAKAAQAAAAAAAEAAAAKAAUAAAAAAAEAAAALAAQAAAAAAAEAAAALAAUAAAAAAAEAAAAMAAQAAAAAAAEAAAAMAAUAAAAAAAEAAAANAAQAAAAAAAEAAAANAAUAAAAAAAEAAAAOAAQAAAAAAAEAAAAOAAUAAAAAAAEAAAAPAAQAAAAAAAEAAAAPAAUAAAAAAAEAAAAQAAQAAAAAAAEAAAAQAAUAAAAAAAEAAAARAAQAAAAAAAEAAAARAAUAAAAAAAEAAAASAAQAAAAAAAEAAAASAAUAAAAAAAEAAAATAAQAAAAAAAEAAAATAAUAAAAAAAEAAAAGAAwAAAAAAAEAAAAGAA0AAAAAAAEAAAAHAAwAAAAAAAEAAAAHAA0AAAAAAAEAAAAIAAwAAAAAAAEAAAAIAA0AAAAAAAEAAAAJAAwAAAAAAAEAAAAJAA0AAAAAAAEAAAAKAAwAAAAAAAEAAAAKAA0AAAAAAAEAAAALAAwAAAAAAAEAAAALAA0AAAAAAAEAAAAMAAwAAAAAAAEAAAAMAA0AAAAAAAEAAAANAAwAAAAAAAEAAAANAA0AAAAAAAEAAAAOAAwAAAAAAAEAAAAOAA0AAAAAAAEAAAAPAAwAAAAAAAEAAAAPAA0AAAAAAAEAAAAQAAwAAAAAAAEAAAAQAA0AAAAAAAEAAAARAAwAAAAAAAEAAAARAA0AAAAAAAEAAAASAAwAAAAAAAEAAAASAA0AAAAAAAEAAAATAAwAAAAAAAEAAAATAA0AAAAAAAEAAAAGAA4AAAAAAAEAAAAHAA4AAAAAAAEAAAAIAA4AAAAAAAEAAAAJAA4AAAAAAAEAAAAKAA4AAAAAAAEAAAALAA4AAAAAAAEAAAAMAA4AAAAAAAEAAAANAA4AAAAAAAEAAAAOAA4AAAAAAAEAAAAPAA4AAAAAAAEAAAAQAA4AAAAAAAEAAAARAA4AAAAAAAEAAAASAA4AAAAAAAEAAAATAA4AAAAAAAEAAAA=")
tile_set = SubResource("TileSet_idtxi")

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(208, 144)
zoom = Vector2(9.3, 9.3)

[connection signal="body_entered" from="lines/Area1" to="." method="_on_area_1_body_entered"]
[connection signal="body_exited" from="lines/Area1" to="." method="_on_area_1_body_exited"]
[connection signal="body_entered" from="lines/Area2" to="." method="_on_area_2_body_entered"]
[connection signal="body_exited" from="lines/Area2" to="." method="_on_area_2_body_exited"]
[connection signal="body_entered" from="lines/Area3" to="." method="_on_area_3_body_entered"]
[connection signal="body_exited" from="lines/Area3" to="." method="_on_area_3_body_exited"]
[connection signal="body_entered" from="lines/Area4" to="." method="_on_area_4_body_entered"]
[connection signal="body_exited" from="lines/Area4" to="." method="_on_area_4_body_exited"]
[connection signal="body_entered" from="lines/deathline" to="." method="_on_deathline_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
